--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "dotenv": "^16.0.2",
     "dotenv-webpack": "^8.0.1",
     "form-data": "^4.0.0",
+    "i18n-iso-countries": "^7.5.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.1.0",
